--- a/environment.yml
+++ b/environment.yml
@@ -6,9 +6,16 @@ dependencies:
   - python=3.12
   - bandit=1.8
   - black=25.1
+  - cachecontrol-with-filecache=0.14
+  - jinja2=3.1
   - networkx=3.4
   - numpy=2.2
+  - pip-audit=2.9
   - plotly=6.1
+  - pydantic=2.11
   - pygraphviz=1.14
   - rdflib=7.1
   - scipy=1.15
+  - pip=25.0
+  - pip:
+    - stix2~=3.0.1
