--- a/environment.yml
+++ b/environment.yml
@@ -8,8 +8,10 @@ dependencies:
   - black=25.1
   - cachecontrol-with-filecache=0.14
   - jinja2=3.1
+  - mypy=1.17
   - networkx=3.4
   - numpy=2.2
+  - owlready2=0.48
   - pip-audit=2.9
   - plotly=6.1
   - pydantic=2.11
