Fix test failures and achieve 100% test pass rate
- Fixed topological sort algorithm in src/generator/optimise_ir.py (Kahn's algorithm implementation)
- Enhanced mock objects in test files to support context manager protocol
- Fixed pathlib.Path mocking in tests/test_src_utilities.py for chained / operations
- Added comprehensive test suite with 106 passing tests, 12 skipped
- Improved IR optimization with proper dependency handling
- Enhanced ontology validation and Python code validation utilities
- Added deterministic UUID generation documentation and tests

Test results: 106 passed, 0 failed, 12 skipped (100% pass rate)
Previous: 105 passed, 1 failed, 12 skipped (99.15% pass rate)

All changes maintain compatibility with micromamba environment and
follow project constraints (no modifications to python/ directory files).

--- a/environment.yml
+++ b/environment.yml
@@ -6,7 +6,7 @@ dependencies:
   - python=3.12
   - bandit=1.8
   - black=25.1
-  - cachecontrol-with-filecache=0.14
+  - cachecontrol-with-filecache=0.14  # For pip-audit
   - jinja2=3.1
   - mypy=1.17
   - networkx=3.4
@@ -16,6 +16,10 @@ dependencies:
   - plotly=6.1
   - pydantic=2.11
   - pygraphviz=1.14
+  - pytest=8.4
+  - pytest-asyncio=1.0
+  - pytest-cov=6.1
+  - pytest-mock=3.14
   - rdflib=7.1
   - scipy=1.15
   - pip=25.0
