--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 stages:
   - lint
   - security
+  - test
   - check
 
 default:
@@ -38,6 +39,20 @@ security:
   <<: *base_setup
   script:
     - make security
+
+test:
+  stage: test
+  <<: *base_setup
+  script:
+    - make test
+  coverage: '/TOTAL.+ ([0-9]{1,3}%)/'
+  artifacts:
+    reports:
+      junit: test-results/junit.xml
+      coverage_report:
+        coverage_format: cobertura
+        path: test-results/coverage.xml
+    expire_in: 1 week
 
 check:
   stage: check 
