--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,5 @@
 stages:
+  - build
   - lint
   - security
   - test
@@ -25,23 +26,36 @@ workflow:
     - apt-get -y install curl make bzip2
     - curl -Ls https://micro.mamba.pm/api/micromamba/linux-64/latest | tar -xvj bin/micromamba 
     - bin/micromamba shell init --shell bash --root-prefix=~/micromamba
-    - exec "$BASH"
+    - source ~/.bashrc
     - make init
+
+build:
+  stage: build
+  <<: *base_setup
+  script:
+    - echo "Environment built successfully"
+  artifacts:
+    paths:
+      - bin/micromamba
+    expire_in: 1 hour
 
 lint:
   stage: lint
+  needs: [build]
   <<: *base_setup
   script:
     - make lint
 
 security:
   stage: security
+  needs: [build]
   <<: *base_setup
   script:
     - make security
 
 test:
   stage: test
+  needs: [build]
   <<: *base_setup
   script:
     - make test
@@ -56,6 +70,7 @@ test:
 
 check:
   stage: check 
+  needs: [build]
   <<: *base_setup
   script:
-    - make check 
+    - make check
