fix(build): correct PyPI package build configuration

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,12 @@
 # Only include Python package - exclude everything else
 global-exclude *
 
+# Include build files
+include pyproject.toml
+include LICENSE
+include NOTICE
+include README.md
+
 # Include only the Python package
 recursive-include python *.py
 
